[gd_scene load_steps=17 format=3 uid="uid://jos3u0hqo1ol"]

[ext_resource type="Script" path="res://Scripts/options.gd" id="1_sniew"]
[ext_resource type="Texture2D" uid="uid://bpy38wpe7eg1j" path="res://Assets/UI/menu/bg_options.png" id="2_m25qp"]
[ext_resource type="FontFile" uid="uid://ctulr7v2sx45b" path="res://Fonts/Pixeled.ttf" id="4_gaadm"]
[ext_resource type="AudioStream" uid="uid://dy2np861tfnsx" path="res://Audio/coin.wav" id="5_vcaxk"]
[ext_resource type="StyleBox" uid="uid://dkkwwhep1mi7l" path="res://Assets/UI/menu/menubutton.tres" id="5_wfgwl"]

[sub_resource type="Gradient" id="Gradient_ft88h"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.712195)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7himw"]
gradient = SubResource("Gradient_ft88h")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CanvasTexture" id="CanvasTexture_3hgft"]
diffuse_texture = SubResource("GradientTexture2D_7himw")
texture_filter = 1

[sub_resource type="Gradient" id="Gradient_43070"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.690909)
colors = PackedColorArray(0.680321, 0.680321, 0.680321, 0.913725, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_akpcw"]
gradient = SubResource("Gradient_43070")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3op1"]
bg_color = Color(0, 0, 0, 0.5)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 2
expand_margin_left = 5.0
expand_margin_top = 20.0
expand_margin_bottom = 20.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4qey"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 4
border_width_bottom = 5
border_color = Color(1, 0, 0, 0)
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_detail = 2
expand_margin_top = 15.0
expand_margin_bottom = 15.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2i1wk"]
bg_color = Color(0.729412, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 4
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_detail = 2
expand_margin_top = 15.0
expand_margin_bottom = 15.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbfwu"]
bg_color = Color(0.680321, 0.680321, 0.680321, 1)
skew = Vector2(0.4, 0)
border_width_left = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 10
corner_detail = 1
expand_margin_left = 10.0
expand_margin_right = 10.0
shadow_color = Color(0, 0, 0, 0.419608)
shadow_offset = Vector2(2.34, 2.23)
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7i52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swhtn"]

[node name="options" type="Control"]
process_mode = 3
z_index = 10
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 398.0
offset_top = 214.0
offset_right = 2078.0
offset_bottom = 1542.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_sniew")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1048.0
offset_top = -876.0
offset_right = 152.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_m25qp")

[node name="TextAndButtons" type="BoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -444.5
offset_right = 444.5
offset_bottom = 739.0
grow_horizontal = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/TextAndButtons"]
custom_minimum_size = Vector2(889, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="title" type="Label" parent="Background/TextAndButtons/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_gaadm")
theme_override_font_sizes/font_size = 72
text = "OPTIONS"
horizontal_alignment = 1

[node name="MarginContainer1" type="MarginContainer" parent="Background/TextAndButtons/VBoxContainer"]
custom_minimum_size = Vector2(10, 100)
layout_mode = 2

[node name="all" type="Label" parent="Background/TextAndButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_gaadm")
theme_override_font_sizes/font_size = 32
text = "MASTER VOLUME"

[node name="master_slider" type="HSlider" parent="Background/TextAndButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_icons/grabber = SubResource("CanvasTexture_3hgft")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_akpcw")
theme_override_styles/slider = SubResource("StyleBoxFlat_c3op1")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_i4qey")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_2i1wk")
max_value = 1.0
step = 0.001
value = 1.0

[node name="music" type="Label" parent="Background/TextAndButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_gaadm")
theme_override_font_sizes/font_size = 32
text = "MUSIC VOLUME"

[node name="music_slider" type="HSlider" parent="Background/TextAndButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_icons/grabber = SubResource("CanvasTexture_3hgft")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_akpcw")
theme_override_styles/slider = SubResource("StyleBoxFlat_c3op1")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_i4qey")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_2i1wk")
max_value = 1.0
step = 0.001
value = 1.0

[node name="sfx" type="Label" parent="Background/TextAndButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_gaadm")
theme_override_font_sizes/font_size = 32
text = " SFX VOLUME"

[node name="sfx_slider" type="HSlider" parent="Background/TextAndButtons/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_icons/grabber = SubResource("CanvasTexture_3hgft")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_akpcw")
theme_override_styles/slider = SubResource("StyleBoxFlat_c3op1")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_i4qey")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_2i1wk")
max_value = 1.0
step = 0.001
value = 1.0

[node name="MarginContainer2" type="MarginContainer" parent="Background/TextAndButtons/VBoxContainer"]
custom_minimum_size = Vector2(10, 100)
layout_mode = 2

[node name="BACK" type="Button" parent="Background/TextAndButtons/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_gaadm")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = ExtResource("5_wfgwl")
theme_override_styles/hover = SubResource("StyleBoxFlat_vbfwu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p7i52")
theme_override_styles/focus = SubResource("StyleBoxEmpty_swhtn")
action_mode = 0
text = "BACK"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vcaxk")
autoplay = true
bus = &"sfx"

[connection signal="value_changed" from="Background/TextAndButtons/VBoxContainer/master_slider" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="Background/TextAndButtons/VBoxContainer/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Background/TextAndButtons/VBoxContainer/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Background/TextAndButtons/VBoxContainer/BACK" to="." method="_on_back_pressed"]
